[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = SNP-Set Kernel Association Test
download_url = https://github.com/limix/skat
keywords = skat, snp, p-value
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = skat
url = https://github.com/limix/skat
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    chi2comb>=0.0.2
    pytest>=3.6.3
    pytest-doctestplus>=0.1.3
    scipy>=1.0.1
    tqdm>=4.23.4
    numpy>=1.14.3

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-plus
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_plus = enabled
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
