[metadata]
author = Rachel Moore, Danilo Horta
author_email = rm18@sanger.ac.uk, horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Test statistics from linear combination of chi-squared distributions.
download_url = https://github.com/limix/chiscore
keywords = test statistic, chi-squared distribution, p-value
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = chiscore
url = https://github.com/limix/chiscore
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    chi2comb>=0.0.3
    numpy>=1.14.3
    pytest-doctestplus>=0.3.0
    pytest>=3.6.3
    scipy>=1.0.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-plus
    --doctest-modules
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE FLOAT_CMP
doctest_plus_atol = 1e-03
doctest_plus_rtol = 1e-03
norecursedirs = .eggs .git *.egg-info build .ropeproject
pep8ignore = E402

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
